virtual-service-tempo.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-api-gateway
  namespace: tracing
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana-tempo.k8s.raj.ninja"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-tempo
  namespace: tracing
spec:
  hosts:
  - "grafana-tempo.k8s.raj.ninja"
  gateways:
  - tracing-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 80
